# rust_postgres

./: .dockerignore  Cargo.toml  README.md  docker-compose.yaml
docker/: Dockerfile  Dockerfile-db
schemas/: messages.sql
src/: main.rs
