[package]
name = "MicroService_Tutorial"
version = "0.1.0"
authors = ["Spas_Z. <spaszahariev54@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Spas: I used this tutorial for this project: http://www.goldsborough.me/rust/web/tutorial/2018/01/20/17-01-11-writing_a_microservice_in_rust/


[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
url = "2.2.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
diesel = { version = "1.0.0", features = ["postgres"] }
# maud = "0.17.2"
maud = "0.22.2"

# Spas: You can start the app with these parameters 
# - properties for database url, username, and pass
# - setting logging level for project to debug
# DATABASE_URL="postgresql://<username>:<password>@localhost:5432" RUST_LOG="<ProjectName>=debug" cargo run